tests/fixtures/fail/while_break_value.sali
let main(): i32 = {
  while true {
    break 42
  }
  0
}
